// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test base/DataExport/Common/BasicInfoWrapper should match snapshot 1`] = `
<div>
  <div
    class="css-rgmylz"
  >
    <div
      class="workflow-base-info-title"
    >
      export-task-1
    </div>
    <div
      aria-label="-"
      class="ant-typography ant-typography-ellipsis ant-typography-single-line workflow-base-info-desc basic-typography-ellipsis css-wgj5gs"
    >
      -
      <div
        aria-label="复制"
        class="ant-typography-copy"
        role="button"
        style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
        tabindex="0"
      >
        <span
          aria-label="copy"
          class="anticon anticon-copy"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="copy"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
            />
          </svg>
        </span>
      </div>
      <span
        aria-hidden="true"
        style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; word-break: keep-all; white-space: nowrap;"
      >
        lg
      </span>
      <span
        aria-hidden="true"
        style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
      >
        <span
          aria-hidden="true"
        >
          ...
        </span>
        <div
          aria-label="复制"
          class="ant-typography-copy"
          role="button"
          style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
          tabindex="0"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`test base/DataExport/Common/BasicInfoWrapper should match snapshot 2`] = `
<div>
  <div
    class="test-cls css-szp7nz"
  >
    <div
      class="workflow-base-info-title"
    >
      export-task-1
    </div>
    <div
      aria-label="desc"
      class="ant-typography ant-typography-ellipsis ant-typography-single-line workflow-base-info-desc basic-typography-ellipsis css-wgj5gs"
    >
      desc
      <div
        aria-label="复制"
        class="ant-typography-copy"
        role="button"
        style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
        tabindex="0"
      >
        <span
          aria-label="copy"
          class="anticon anticon-copy"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="copy"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
            />
          </svg>
        </span>
      </div>
      <span
        aria-hidden="true"
        style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; word-break: keep-all; white-space: nowrap;"
      >
        lg
      </span>
      <span
        aria-hidden="true"
        style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
      >
        <span
          aria-hidden="true"
        >
          ...
        </span>
        <div
          aria-label="复制"
          class="ant-typography-copy"
          role="button"
          style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
          tabindex="0"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`test base/DataExport/Common/BasicInfoWrapper should match snapshot 3`] = `
<div>
  <div
    class="css-1rz37bc"
  >
    <div
      class="workflow-base-info-status"
    >
      <svg
        class="icon-workflow-status-wrapper"
        fill="none"
        height="55"
        viewBox="0 0 74 55"
        width="74"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          filter="url(#filter0_d_1360_13602)"
        >
          <path
            d="M69 0H5V31.6481C5 33.2482 5.95359 34.6944 7.42432 35.3247L33.8487 46.6494C35.861 47.5119 38.139 47.5119 40.1514 46.6494L66.5757 35.3247C68.0464 34.6944 69 33.2482 69 31.6481V0Z"
            fill="currentColor"
          />
        </g>
        <defs>
          <filter
            color-interpolation-filters="sRGB"
            filterUnits="userSpaceOnUse"
            height="57.2961"
            id="filter0_d_1360_13602"
            width="74"
            x="0"
            y="-3"
          >
            <feflood
              flood-opacity="0"
              result="BackgroundImageFix"
            />
            <fecolormatrix
              in="SourceAlpha"
              result="hardAlpha"
              type="matrix"
              values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
            />
            <feoffset
              dy="2"
            />
            <fegaussianblur
              stdDeviation="2.5"
            />
            <fecomposite
              in2="hardAlpha"
              operator="out"
            />
            <fecolormatrix
              type="matrix"
              values="0 0 0 0 0.454902 0 0 0 0 0.32549 0 0 0 0 0.854902 0 0 0 0.4 0"
            />
            <feblend
              in2="BackgroundImageFix"
              mode="normal"
              result="effect1_dropShadow_2935_18512"
            />
            <feblend
              in="SourceGraphic"
              in2="effect1_dropShadow_2935_18512"
              mode="normal"
              result="shape"
            />
          </filter>
        </defs>
      </svg>
      <span
        class="workflow-base-info-status-text"
      >
        已关闭
      </span>
    </div>
    <div
      class="workflow-base-info-title"
    >
      export-task-1
    </div>
    <div
      aria-label="desc"
      class="ant-typography ant-typography-ellipsis ant-typography-single-line workflow-base-info-desc basic-typography-ellipsis css-wgj5gs"
    >
      desc
      <div
        aria-label="复制"
        class="ant-typography-copy"
        role="button"
        style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
        tabindex="0"
      >
        <span
          aria-label="copy"
          class="anticon anticon-copy"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="copy"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
            />
          </svg>
        </span>
      </div>
      <span
        aria-hidden="true"
        style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; word-break: keep-all; white-space: nowrap;"
      >
        lg
      </span>
      <span
        aria-hidden="true"
        style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
      >
        <span
          aria-hidden="true"
        >
          ...
        </span>
        <div
          aria-label="复制"
          class="ant-typography-copy"
          role="button"
          style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
          tabindex="0"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`test base/DataExport/Common/BasicInfoWrapper should match snapshot 4`] = `
<div>
  <div
    class="css-t0lsb1"
  >
    <div
      class="workflow-base-info-status"
    >
      <svg
        class="icon-workflow-status-wrapper"
        fill="none"
        height="55"
        viewBox="0 0 74 55"
        width="74"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          filter="url(#filter0_d_1360_13602)"
        >
          <path
            d="M69 0H5V31.6481C5 33.2482 5.95359 34.6944 7.42432 35.3247L33.8487 46.6494C35.861 47.5119 38.139 47.5119 40.1514 46.6494L66.5757 35.3247C68.0464 34.6944 69 33.2482 69 31.6481V0Z"
            fill="currentColor"
          />
        </g>
        <defs>
          <filter
            color-interpolation-filters="sRGB"
            filterUnits="userSpaceOnUse"
            height="57.2961"
            id="filter0_d_1360_13602"
            width="74"
            x="0"
            y="-3"
          >
            <feflood
              flood-opacity="0"
              result="BackgroundImageFix"
            />
            <fecolormatrix
              in="SourceAlpha"
              result="hardAlpha"
              type="matrix"
              values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
            />
            <feoffset
              dy="2"
            />
            <fegaussianblur
              stdDeviation="2.5"
            />
            <fecomposite
              in2="hardAlpha"
              operator="out"
            />
            <fecolormatrix
              type="matrix"
              values="0 0 0 0 0.454902 0 0 0 0 0.32549 0 0 0 0 0.854902 0 0 0 0.4 0"
            />
            <feblend
              in2="BackgroundImageFix"
              mode="normal"
              result="effect1_dropShadow_2935_18512"
            />
            <feblend
              in="SourceGraphic"
              in2="effect1_dropShadow_2935_18512"
              mode="normal"
              result="shape"
            />
          </filter>
        </defs>
      </svg>
      <span
        class="workflow-base-info-status-text"
      >
        正在导出
      </span>
    </div>
    <div
      class="workflow-base-info-title"
    >
      export-task-1
    </div>
    <div
      aria-label="desc"
      class="ant-typography ant-typography-ellipsis ant-typography-single-line workflow-base-info-desc basic-typography-ellipsis css-wgj5gs"
    >
      desc
      <div
        aria-label="复制"
        class="ant-typography-copy"
        role="button"
        style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
        tabindex="0"
      >
        <span
          aria-label="copy"
          class="anticon anticon-copy"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="copy"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
            />
          </svg>
        </span>
      </div>
      <span
        aria-hidden="true"
        style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; word-break: keep-all; white-space: nowrap;"
      >
        lg
      </span>
      <span
        aria-hidden="true"
        style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
      >
        <span
          aria-hidden="true"
        >
          ...
        </span>
        <div
          aria-label="复制"
          class="ant-typography-copy"
          role="button"
          style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
          tabindex="0"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`test base/DataExport/Common/BasicInfoWrapper should match snapshot 5`] = `
<div>
  <div
    class="css-rgmylz"
  >
    <div
      class="workflow-base-info-status"
    >
      <svg
        class="icon-workflow-status-wrapper"
        fill="none"
        height="55"
        viewBox="0 0 74 55"
        width="74"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          filter="url(#filter0_d_1360_13602)"
        >
          <path
            d="M69 0H5V31.6481C5 33.2482 5.95359 34.6944 7.42432 35.3247L33.8487 46.6494C35.861 47.5119 38.139 47.5119 40.1514 46.6494L66.5757 35.3247C68.0464 34.6944 69 33.2482 69 31.6481V0Z"
            fill="currentColor"
          />
        </g>
        <defs>
          <filter
            color-interpolation-filters="sRGB"
            filterUnits="userSpaceOnUse"
            height="57.2961"
            id="filter0_d_1360_13602"
            width="74"
            x="0"
            y="-3"
          >
            <feflood
              flood-opacity="0"
              result="BackgroundImageFix"
            />
            <fecolormatrix
              in="SourceAlpha"
              result="hardAlpha"
              type="matrix"
              values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
            />
            <feoffset
              dy="2"
            />
            <fegaussianblur
              stdDeviation="2.5"
            />
            <fecomposite
              in2="hardAlpha"
              operator="out"
            />
            <fecolormatrix
              type="matrix"
              values="0 0 0 0 0.454902 0 0 0 0 0.32549 0 0 0 0 0.854902 0 0 0 0.4 0"
            />
            <feblend
              in2="BackgroundImageFix"
              mode="normal"
              result="effect1_dropShadow_2935_18512"
            />
            <feblend
              in="SourceGraphic"
              in2="effect1_dropShadow_2935_18512"
              mode="normal"
              result="shape"
            />
          </filter>
        </defs>
      </svg>
      <span
        class="workflow-base-info-status-text"
      >
        待审核
      </span>
    </div>
    <div
      class="workflow-base-info-title"
    >
      export-task-1
    </div>
    <div
      aria-label="desc"
      class="ant-typography ant-typography-ellipsis ant-typography-single-line workflow-base-info-desc basic-typography-ellipsis css-wgj5gs"
    >
      desc
      <div
        aria-label="复制"
        class="ant-typography-copy"
        role="button"
        style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
        tabindex="0"
      >
        <span
          aria-label="copy"
          class="anticon anticon-copy"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="copy"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
            />
          </svg>
        </span>
      </div>
      <span
        aria-hidden="true"
        style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; word-break: keep-all; white-space: nowrap;"
      >
        lg
      </span>
      <span
        aria-hidden="true"
        style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
      >
        <span
          aria-hidden="true"
        >
          ...
        </span>
        <div
          aria-label="复制"
          class="ant-typography-copy"
          role="button"
          style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
          tabindex="0"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`test base/DataExport/Common/BasicInfoWrapper should match snapshot 6`] = `
<div>
  <div
    class="css-6g9lap"
  >
    <div
      class="workflow-base-info-status"
    >
      <svg
        class="icon-workflow-status-wrapper"
        fill="none"
        height="55"
        viewBox="0 0 74 55"
        width="74"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          filter="url(#filter0_d_1360_13602)"
        >
          <path
            d="M69 0H5V31.6481C5 33.2482 5.95359 34.6944 7.42432 35.3247L33.8487 46.6494C35.861 47.5119 38.139 47.5119 40.1514 46.6494L66.5757 35.3247C68.0464 34.6944 69 33.2482 69 31.6481V0Z"
            fill="currentColor"
          />
        </g>
        <defs>
          <filter
            color-interpolation-filters="sRGB"
            filterUnits="userSpaceOnUse"
            height="57.2961"
            id="filter0_d_1360_13602"
            width="74"
            x="0"
            y="-3"
          >
            <feflood
              flood-opacity="0"
              result="BackgroundImageFix"
            />
            <fecolormatrix
              in="SourceAlpha"
              result="hardAlpha"
              type="matrix"
              values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
            />
            <feoffset
              dy="2"
            />
            <fegaussianblur
              stdDeviation="2.5"
            />
            <fecomposite
              in2="hardAlpha"
              operator="out"
            />
            <fecolormatrix
              type="matrix"
              values="0 0 0 0 0.454902 0 0 0 0 0.32549 0 0 0 0 0.854902 0 0 0 0.4 0"
            />
            <feblend
              in2="BackgroundImageFix"
              mode="normal"
              result="effect1_dropShadow_2935_18512"
            />
            <feblend
              in="SourceGraphic"
              in2="effect1_dropShadow_2935_18512"
              mode="normal"
              result="shape"
            />
          </filter>
        </defs>
      </svg>
      <span
        class="workflow-base-info-status-text"
      >
        待导出
      </span>
    </div>
    <div
      class="workflow-base-info-title"
    >
      export-task-1
    </div>
    <div
      aria-label="desc"
      class="ant-typography ant-typography-ellipsis ant-typography-single-line workflow-base-info-desc basic-typography-ellipsis css-wgj5gs"
    >
      desc
      <div
        aria-label="复制"
        class="ant-typography-copy"
        role="button"
        style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
        tabindex="0"
      >
        <span
          aria-label="copy"
          class="anticon anticon-copy"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="copy"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
            />
          </svg>
        </span>
      </div>
      <span
        aria-hidden="true"
        style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; word-break: keep-all; white-space: nowrap;"
      >
        lg
      </span>
      <span
        aria-hidden="true"
        style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
      >
        <span
          aria-hidden="true"
        >
          ...
        </span>
        <div
          aria-label="复制"
          class="ant-typography-copy"
          role="button"
          style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
          tabindex="0"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`test base/DataExport/Common/BasicInfoWrapper should match snapshot 7`] = `
<div>
  <div
    class="css-gdyhjj"
  >
    <div
      class="workflow-base-info-status"
    >
      <svg
        class="icon-workflow-status-wrapper"
        fill="none"
        height="55"
        viewBox="0 0 74 55"
        width="74"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          filter="url(#filter0_d_1360_13602)"
        >
          <path
            d="M69 0H5V31.6481C5 33.2482 5.95359 34.6944 7.42432 35.3247L33.8487 46.6494C35.861 47.5119 38.139 47.5119 40.1514 46.6494L66.5757 35.3247C68.0464 34.6944 69 33.2482 69 31.6481V0Z"
            fill="currentColor"
          />
        </g>
        <defs>
          <filter
            color-interpolation-filters="sRGB"
            filterUnits="userSpaceOnUse"
            height="57.2961"
            id="filter0_d_1360_13602"
            width="74"
            x="0"
            y="-3"
          >
            <feflood
              flood-opacity="0"
              result="BackgroundImageFix"
            />
            <fecolormatrix
              in="SourceAlpha"
              result="hardAlpha"
              type="matrix"
              values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
            />
            <feoffset
              dy="2"
            />
            <fegaussianblur
              stdDeviation="2.5"
            />
            <fecomposite
              in2="hardAlpha"
              operator="out"
            />
            <fecolormatrix
              type="matrix"
              values="0 0 0 0 0.454902 0 0 0 0 0.32549 0 0 0 0 0.854902 0 0 0 0.4 0"
            />
            <feblend
              in2="BackgroundImageFix"
              mode="normal"
              result="effect1_dropShadow_2935_18512"
            />
            <feblend
              in="SourceGraphic"
              in2="effect1_dropShadow_2935_18512"
              mode="normal"
              result="shape"
            />
          </filter>
        </defs>
      </svg>
      <span
        class="workflow-base-info-status-text"
      >
        已驳回
      </span>
    </div>
    <div
      class="workflow-base-info-title"
    >
      export-task-1
    </div>
    <div
      aria-label="desc"
      class="ant-typography ant-typography-ellipsis ant-typography-single-line workflow-base-info-desc basic-typography-ellipsis css-wgj5gs"
    >
      desc
      <div
        aria-label="复制"
        class="ant-typography-copy"
        role="button"
        style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
        tabindex="0"
      >
        <span
          aria-label="copy"
          class="anticon anticon-copy"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="copy"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
            />
          </svg>
        </span>
      </div>
      <span
        aria-hidden="true"
        style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; word-break: keep-all; white-space: nowrap;"
      >
        lg
      </span>
      <span
        aria-hidden="true"
        style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
      >
        <span
          aria-hidden="true"
        >
          ...
        </span>
        <div
          aria-label="复制"
          class="ant-typography-copy"
          role="button"
          style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
          tabindex="0"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`test base/DataExport/Common/BasicInfoWrapper should match snapshot 8`] = `
<div>
  <div
    class="css-1aigfbd"
  >
    <div
      class="workflow-base-info-status"
    >
      <svg
        class="icon-workflow-status-wrapper"
        fill="none"
        height="55"
        viewBox="0 0 74 55"
        width="74"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          filter="url(#filter0_d_1360_13602)"
        >
          <path
            d="M69 0H5V31.6481C5 33.2482 5.95359 34.6944 7.42432 35.3247L33.8487 46.6494C35.861 47.5119 38.139 47.5119 40.1514 46.6494L66.5757 35.3247C68.0464 34.6944 69 33.2482 69 31.6481V0Z"
            fill="currentColor"
          />
        </g>
        <defs>
          <filter
            color-interpolation-filters="sRGB"
            filterUnits="userSpaceOnUse"
            height="57.2961"
            id="filter0_d_1360_13602"
            width="74"
            x="0"
            y="-3"
          >
            <feflood
              flood-opacity="0"
              result="BackgroundImageFix"
            />
            <fecolormatrix
              in="SourceAlpha"
              result="hardAlpha"
              type="matrix"
              values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
            />
            <feoffset
              dy="2"
            />
            <fegaussianblur
              stdDeviation="2.5"
            />
            <fecomposite
              in2="hardAlpha"
              operator="out"
            />
            <fecolormatrix
              type="matrix"
              values="0 0 0 0 0.454902 0 0 0 0 0.32549 0 0 0 0 0.854902 0 0 0 0.4 0"
            />
            <feblend
              in2="BackgroundImageFix"
              mode="normal"
              result="effect1_dropShadow_2935_18512"
            />
            <feblend
              in="SourceGraphic"
              in2="effect1_dropShadow_2935_18512"
              mode="normal"
              result="shape"
            />
          </filter>
        </defs>
      </svg>
      <span
        class="workflow-base-info-status-text"
      >
        导出失败
      </span>
    </div>
    <div
      class="workflow-base-info-title"
    >
      export-task-1
    </div>
    <div
      aria-label="desc"
      class="ant-typography ant-typography-ellipsis ant-typography-single-line workflow-base-info-desc basic-typography-ellipsis css-wgj5gs"
    >
      desc
      <div
        aria-label="复制"
        class="ant-typography-copy"
        role="button"
        style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
        tabindex="0"
      >
        <span
          aria-label="copy"
          class="anticon anticon-copy"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="copy"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
            />
          </svg>
        </span>
      </div>
      <span
        aria-hidden="true"
        style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; word-break: keep-all; white-space: nowrap;"
      >
        lg
      </span>
      <span
        aria-hidden="true"
        style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
      >
        <span
          aria-hidden="true"
        >
          ...
        </span>
        <div
          aria-label="复制"
          class="ant-typography-copy"
          role="button"
          style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
          tabindex="0"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </div>
      </span>
    </div>
  </div>
</div>
`;

exports[`test base/DataExport/Common/BasicInfoWrapper should match snapshot 9`] = `
<div>
  <div
    class="css-1lls3h9"
  >
    <div
      class="workflow-base-info-status"
    >
      <svg
        class="icon-workflow-status-wrapper"
        fill="none"
        height="55"
        viewBox="0 0 74 55"
        width="74"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          filter="url(#filter0_d_1360_13602)"
        >
          <path
            d="M69 0H5V31.6481C5 33.2482 5.95359 34.6944 7.42432 35.3247L33.8487 46.6494C35.861 47.5119 38.139 47.5119 40.1514 46.6494L66.5757 35.3247C68.0464 34.6944 69 33.2482 69 31.6481V0Z"
            fill="currentColor"
          />
        </g>
        <defs>
          <filter
            color-interpolation-filters="sRGB"
            filterUnits="userSpaceOnUse"
            height="57.2961"
            id="filter0_d_1360_13602"
            width="74"
            x="0"
            y="-3"
          >
            <feflood
              flood-opacity="0"
              result="BackgroundImageFix"
            />
            <fecolormatrix
              in="SourceAlpha"
              result="hardAlpha"
              type="matrix"
              values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
            />
            <feoffset
              dy="2"
            />
            <fegaussianblur
              stdDeviation="2.5"
            />
            <fecomposite
              in2="hardAlpha"
              operator="out"
            />
            <fecolormatrix
              type="matrix"
              values="0 0 0 0 0.454902 0 0 0 0 0.32549 0 0 0 0 0.854902 0 0 0 0.4 0"
            />
            <feblend
              in2="BackgroundImageFix"
              mode="normal"
              result="effect1_dropShadow_2935_18512"
            />
            <feblend
              in="SourceGraphic"
              in2="effect1_dropShadow_2935_18512"
              mode="normal"
              result="shape"
            />
          </filter>
        </defs>
      </svg>
      <span
        class="workflow-base-info-status-text"
      >
        导出成功
      </span>
    </div>
    <div
      class="workflow-base-info-title"
    >
      export-task-1
    </div>
    <div
      aria-label="desc"
      class="ant-typography ant-typography-ellipsis ant-typography-single-line workflow-base-info-desc basic-typography-ellipsis css-wgj5gs"
    >
      desc
      <div
        aria-label="复制"
        class="ant-typography-copy"
        role="button"
        style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
        tabindex="0"
      >
        <span
          aria-label="copy"
          class="anticon anticon-copy"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="copy"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
            />
          </svg>
        </span>
      </div>
      <span
        aria-hidden="true"
        style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; word-break: keep-all; white-space: nowrap;"
      >
        lg
      </span>
      <span
        aria-hidden="true"
        style="position: fixed; display: block; left: 0px; top: 0px; z-index: -9999; visibility: hidden; pointer-events: none; font-size: 0px; width: 0px; white-space: normal; margin: 0px; padding: 0px;"
      >
        <span
          aria-hidden="true"
        >
          ...
        </span>
        <div
          aria-label="复制"
          class="ant-typography-copy"
          role="button"
          style="border: 0px; background: transparent; padding: 0px; line-height: inherit; display: inline-block;"
          tabindex="0"
        >
          <span
            aria-label="copy"
            class="anticon anticon-copy"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="copy"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
              />
            </svg>
          </span>
        </div>
      </span>
    </div>
  </div>
</div>
`;
